tests/NormalTests/paczka2/big_fuzzy/36212269.err
Error in line 12: eO8Lvoyq A374 98,0
Error in line 24: eO8Lvoyq S409 2,9
Error in line 33: eO8Lvoyq S319 0,0
Error in line 35: 3SSgj S319 16,6
Error in line 37: eO8Lvoyq S409 39,3
Error in line 41: S26 A374 4,7
Error in line 49: 7lMdzV8 A374 42,8
Error in line 59: a6u S409 202,8
Error in line 66: 7lMdzV8 A374 0,2
Error in line 67: cIu0Dcv5F S319 48,3
Error in line 73: cIu0Dcv5F S26 59,9
Error in line 78: 3SSgj S26 71,7
Error in line 87: cIu0Dcv5F A374 61,4
Error in line 85: YhK6W31zR S319 99,3
Error in line 89: a6u S409 0,8
Error in line 100: a6u S319 67,2
Error in line 116: YhK6W31zR S409 11,8
Error in line 120: eO8Lvoyq A374 29,5
Error in line 156: cIu0Dcv5F S319 74,1
Error in line 163: cIu0Dcv5F S409 32,6
Error in line 175: YhK6W31zR S319 26,33
Error in line 180: 7lMdzV8 S319 59,1
Error in line 186: 7lMdzV8 S409 26,5
Error in line 179: YhK6W31zR S319 106,8
Error in line 192: YhK6W31zR A374 9,7
Error in line 190: S26 S319 2,8
Error in line 182: eO8Lvoyq S409 153,1
Error in line 217: S26 S409 -1,9
Error in line 219: 3SSgj S26 60,9
Error in line 224: 7lMdzV8 S319 22,6
Error in line 228: 3SSgj A374 54,7
Error in line 238: cIu0Dcv5F S409 78,2
Error in line 243: 3SSgj A374 42,2
